--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT =3000
-DB_URL = mongodb+srv://bouthayna123:bouthayna123@cluster0.pth3n.mongodb.net/?retryWrites=true&w=majority.
+PORT =3001
+DB_URL =mongodb+srv://bouthaynakhemissi:UkGEnkRqRrC8YTlX@cluster0.cu8lk1n.mongodb.net/test
